update theme commit
Signed-off-by: Bishoy Youssef <bishoy.youssef@mytigate.com>

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -72,6 +72,10 @@ params:
   # Whether to add mathjax support on all pages. Alternatively, you can opt-in per page by adding `mathjax: true` in the frontmatter.
   mathjax: false
 
+
+  # Make nav bar sticky
+  stickyNav: false
+
   # Whether the fade animations on the home page will be enabled
   animate: true
 
