--- a/hugo.yaml
+++ b/hugo.yaml
@@ -74,7 +74,7 @@ params:
 
 
   # Make nav bar sticky
-  stickyNav: false
+  stickyNav: true
 
   # Whether the fade animations on the home page will be enabled
   animate: true
