--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,7 +15,7 @@ outputs:
 Paginate: 3
 enableRobotsTXT: true
 # disqusShortname: your-disqus-shortname
-# googleAnalytics: G-MEASUREMENT_ID
+googleAnalytics: G-FXHF10ZJS1
 
 markup:
   goldmark:
@@ -35,22 +35,22 @@ Menus:
     #   url: /gallery
     #   weight: 2
     #Dropdown menu
-    # - identifier: dropdown
-    #   title: Example dropdown menu
-    #   name: Dropdown
-    #   weight: 3
-    # - identifier: dropdown1
-    #   title: example dropdown 1
-    #   name: example 1
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 1
-    # - identifier: dropdown2
-    #   title: example dropdown 2
-    #   name: example 2
-    #   url: /#
-    #   parent: dropdown
-    #   weight: 2
+    - identifier: dropdown
+      title: More information
+      name: More
+      weight: 3
+    - identifier: dropdown1
+      title: Resume
+      name: Resume
+      url: "/bishoyyoussef-cv.pdf"
+      parent: dropdown
+      weight: 1
+    - identifier: dropdown2
+      title: Contact
+      name: Let's Chat
+      url: /#contact
+      parent: dropdown
+      weight: 2
 
 params:
   title: "Bishoy Youssef"
@@ -81,7 +81,7 @@ params:
 
   theme:
     # disableThemeToggle: true
-    defaultTheme: "dark" # dark
+    defaultTheme: "light" # dark
 
   font:
     fontSize: 1rem # default: 1rem
@@ -105,6 +105,11 @@ params:
 # --charcoal: #3e535fff;
 # --ash-gray: #9ea7a2ff;
 # --mint-green: #c3e2deff;
+#aabcbf
+#02001c -> #242728
+#72a3b4 -> #fea731
+#6c7582 -> #7d7d7b
+#aabcbf -> #b3b1ad
   # color preference
   color:
     textColor: "#051f32"
@@ -117,9 +122,9 @@ params:
     darkmode:
       textColor: "#d6ebe8"
       secondaryTextColor: "#d6ebe8"
-      backgroundColor: "#02001c"
+      backgroundColor: "#242728"
       secondaryBackgroundColor: "#384B56"
-      primaryColor: "#72A3B4"
+      primaryColor: "#fea731"
       secondaryColor: "#49616F"
 
   # If you want to customize the menu, you can change it here
@@ -152,10 +157,10 @@ params:
     # roundImage: true # Make hero image circular | default false
     button:
       enable: true
-      name: "Resume"
-      url: "/BishoyYoussef-CV.pdf"
+      name: "Let's Chat"
+      url: "#contact"
       download: false
-      newPage: true
+      newPage: false
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-linkedin
@@ -268,44 +273,44 @@ params:
   education:
     enable: false
     # title: "Custom Name"
-    index: false
-    items:
-      - title: "Master of Business Administration"
-        school:
-          name: "University of California, Berkeley"
-          url: "https://example.org"
-        date: "2013 - 2015"
-        GPA: "3.8 out of 5.0"
-        content: |-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Massachusetts Institute of Technology"
-          url: "https://example.org"
-        date: "2009 - 2013"
-        GPA: "3.9 out of 5.0"
-        content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
+    # index: false
+    # items:
+    #   - title: "Master of Business Administration"
+    #     school:
+    #       name: "University of California, Berkeley"
+    #       url: "https://example.org"
+    #     date: "2013 - 2015"
+    #     GPA: "3.8 out of 5.0"
+    #     content: |-
+    #       Extracurricular Activities
+    #         - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    #         - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
+    #   - title: "Bachelor of Science in Computer Science"
+    #     school:
+    #       name: "Massachusetts Institute of Technology"
+    #       url: "https://example.org"
+    #     date: "2009 - 2013"
+    #     GPA: "3.9 out of 5.0"
+    #     content: |-
+    #       I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
+    #       - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
+    #       - Face mask detection using a single convolutional neural network.
 
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-        featuredLink:
-          enable: true
-          name: "My academic record"
-          url: "https://example.com"
-      - title: "High School"
-        school:
-          name: "Thomas Jefferson High School for Science and Technology."
-          url: "https://example.org"
-        GPA: "4.2 out of 5.0"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
+    #       Extracurricular Activities
+    #         - Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    #         - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
+    #     featuredLink:
+    #       enable: true
+    #       name: "My academic record"
+    #       url: "https://example.com"
+    #   - title: "High School"
+    #     school:
+    #       name: "Thomas Jefferson High School for Science and Technology."
+    #       url: "https://example.org"
+    #     GPA: "4.2 out of 5.0"
+    #     featuredLink:
+    #       enable: true
+    #       url: "https://example.com"
 
   # Achievements
   achievements:
@@ -314,99 +319,28 @@ params:
     items:
       - title: Patent
         content: |
-          Co-authored a patent on IoT edge computing (Patent No.: US 10791063 B1)
+          Co-authored a patent on IoT edge computing
+          <br /><br />Patent No.: US 10791063 B1
         url: https://patents.justia.com/patent/10791063
-        image: /images/achievment.jpg
-      - title: ECD Star Award
-        content: for an internal innovative project
-        image: /images/achievment.jpg
+        image: /images/achievments/patent.png
+      - title: Public Speaking
+        content: |
+          Spoke in multiple events including:
+            - DevOps Toronto
+            - RiseUp Summit for startups
+        image: /images/achievments/public.png
       - title: Top Acheiver Award Dell EMC
-        content: For, alongside engineering, managing a remote team.
-        image: /images/achievment.jpg
+        content: Nominated by my manager, for team leadership skills, as well as engineering skills
+        image: /images/achievments/top.png
+      - title: ECD Star Award
+        content: Received the top award from former EMC departement ECD for an internal innovation project.
+        image: /images/achievments/ecd.png
 
   # projects
   projects:
     enable: true
     # title: "Custom Name"
     items:
-    - title: Archiving System
-      content: Created a fully functional system for archiving the works of late Egyptian Artist Adam Henin.
-      image: /images/projects/adam.png
-      featured:
-        name: Adam Henin
-        link: https://www.adamheneinmuseum.com/about
-      badges:
-        - ".NET"
-        - "Desktop"
-        - "Project Management"
-
-    - title: Agile Transformation
-      content: Helped a local startup (The Elephants Tech) with the transformation of their processes into Agile.
-      image: /images/projects/elephants.png
-      featured:
-        name: Elephants Tech
-        link: https://theelephant.tech/home
-      badges:
-        - "Agile"
-        - "Project Management"
-
-    - title: Meta Project
-      content: Built my 2 websites from the bottom up using modern frameworks.
-      image: /images/projects/meta.png
-      featured:
-        name: Bishoy.tech
-        link: https://bishoy.tech
-      badges:
-        - "HUGO"
-        - "Github Pages"
-        - "Jekyll"
-        - "DevOps"
-
-    - title: Monitoring Dashboard
-      content: Built a Dashboard for DHL Qatar to monitor their KPIs.
-      image: /images/projects/dhl.png
-      featured:
-        name: DHL Qatar
-        link: https://www.dhl.com/qa-en/home.html
-      badges:
-        - "JS"
-        - "Node.js"
-        - "Project Management"
-        - "DevOps"
-
-    - title: Pipeline Modernization
-      content: Worked on migrating the CI/CD pipelines of RackHD from Jenkins to Concourse
-      image: /images/projects/rackhd.png
-      featured:
-        name: RackHD
-        link: https://github.com/RackHD/RackHD
-      badges:
-        - "DevOps"
-        - "CI/CD"
-
-    - title: Transparency Project
-      content: Created Complex Analytics Dashboard for The Phoenix Group EU to have transparent monitoring over their operations
-      image: /images/projects/phoenix.png
-      featured:
-        name: Phoenix
-        link: https://www.phoenixgroup.eu/en/
-      badges:
-        - "DataScience"
-        - "SQL"
-        - "GO"
-
-    - title: Mytigate Infrastructure Modernization
-      content: My first interaction with Mytigate; I redid the whole infrastructure into DevOps, IaC, Containers. I also created the release planning strategy and automations.
-      image: /images/projects/mytigate.png
-      featured:
-        name: Mytigate GmbH
-        link: https://mytigate.com
-      badges:
-        - "DevOps"
-        - "IaC"
-        - "Conatiners"
-        - "Azure"
-    
     - title: Monitoring (Ongoing)
       content: Helping Cyntegrity GmbH create a robust monitoring strategy for their infrastructure.
       image: /images/projects/monitoring.png
@@ -417,20 +351,19 @@ params:
         - "DevOps"
         - "Monitoring"
         - "Azure"
-    
-    - title: Concourse Dashboard
-      content: Long before Concourse had a dashboard, I helped create one of the first iterations of the Concourse Dashboard.
-      image: /images/projects/concourse.png
+
+    - title: Rescounts
+      content: Maintained the whole project after being handed over from the original developer, added features, created realease strategies. I was also responsible for hiring the initial Tech Team.
+      image: /images/projects/rescounts.png
       featured:
-        name: Concourse
-        link: https://concourse-ci.org
+        name: Rescounts
+        link: https://www.rescounts.com/home
       badges:
-        - "Node.js"
-        - "React"
-        - "CI/CD"
-        - "DevOps"
+        - "Go"
         - "Project Management"
-    
+        - "Agile"
+        - "DevOps"
+
     - title: Concourse Resource Types
       content: Managed and developed the Concourse resource types website (formerly DutyFree). I also created the whole mechanism for resource maintainers to submit their resources into the website.
       image: /images/projects/dutyfree.png
@@ -447,17 +380,96 @@ params:
         - icon: fab fa-github
           url: https://github.com/concourse/resource-types-website
     
-    - title: Rescounts
-      content: Maintained the whole project after being handed over from the original developer, added features, created realease strategies. I was also responsible for hiring the initial Tech Team.
-      image: /images/projects/rescounts.png
+    - title: Mytigate Infrastructure Modernization
+      content: My first interaction with Mytigate; I redid the whole infrastructure into DevOps, IaC, Containers. I also created the release planning strategy and automations.
+      image: /images/projects/mytigate.png
       featured:
-        name: Rescounts
-        link: https://www.rescounts.com/home
+        name: Mytigate GmbH
+        link: https://mytigate.com
       badges:
-        - "Go"
-        - "Project Management"
-        - "Agile"
         - "DevOps"
+        - "IaC"
+        - "Conatiners"
+        - "Azure"
+
+    - title: Transparency Project
+      content: Created Complex Analytics Dashboard for The Phoenix Group EU to have transparent monitoring over their operations
+      image: /images/projects/phoenix.png
+      featured:
+        name: Phoenix
+        link: https://www.phoenixgroup.eu/en/
+      badges:
+        - "DataScience"
+        - "SQL"
+        - "GO"
+
+    - title: Meta Project
+      content: Built my 2 websites from the bottom up using modern frameworks.
+      image: /images/projects/meta.png
+      featured:
+        name: Bishoy.tech
+        link: https://bishoy.tech
+      badges:
+        - "HUGO"
+        - "Github Pages"
+        - "Jekyll"
+        - "DevOps"
+
+    - title: Concourse Dashboard
+      content: Long before Concourse had a dashboard, I helped create one of the first iterations of the Concourse Dashboard.
+      image: /images/projects/concourse.png
+      featured:
+        name: Concourse
+        link: https://concourse-ci.org
+      badges:
+        - "Node.js"
+        - "React"
+        - "CI/CD"
+        - "DevOps"
+        - "Project Management"
+    
+    - title: Pipeline Modernization
+      content: Worked on migrating the CI/CD pipelines of RackHD from Jenkins to Concourse
+      image: /images/projects/rackhd.png
+      featured:
+        name: RackHD
+        link: https://github.com/RackHD/RackHD
+      badges:
+        - "DevOps"
+        - "CI/CD"
+    
+    - title: Agile Transformation
+      content: Helped a local startup (The Elephants Tech) with the transformation of their processes into Agile.
+      image: /images/projects/elephants.png
+      featured:
+        name: Elephants Tech
+        link: https://theelephant.tech/home
+      badges:
+        - "Agile"
+        - "Project Management"
+
+    - title: Monitoring Dashboard
+      content: Built a Dashboard for DHL Qatar to monitor their KPIs.
+      image: /images/projects/dhl.png
+      featured:
+        name: DHL Qatar
+        link: https://www.dhl.com/qa-en/home.html
+      badges:
+        - "JS"
+        - "Node.js"
+        - "Project Management"
+        - "DevOps"
+
+    - title: Archiving System
+      content: Created a fully functional system for archiving the works of late Egyptian Artist Adam Henin.
+      image: /images/projects/adam.png
+      featured:
+        name: Adam Henin
+        link: https://www.adamheneinmuseum.com/about
+      badges:
+        - ".NET"
+        - "Desktop"
+        - "Project Management"
 
 
   #Services
@@ -466,40 +478,46 @@ params:
     items:
     - service: CTOccasional
       title: Fractional CTO
+      image: /images/services/fcto.png
       content: |
         Imagine having a tech wizard by your side, but only when you need one.
         That's me as your Fractional CTO. I'll jump in to steer your tech ship part-time, aligning your tech strategy with your business goals.
         From choosing the right tech stack to keeping your digital fortress secure, I'm here to light the way and lead your tech journey.
         - Let's chart the course to success, together!
-    - service: DevOptimize
+    - service: Dev Optimize
       title: DevOps Consulting
+      image: /images/services/devops.png
       content: |
         Ready to make your software development smoother and more efficient? That's where my DevOps Consulting comes in.
         I'll be your guide in integrating development and operations, using cool tools like Jenkins and Docker, and automating the heck out of your processes.
         Think of it as giving your team superpowers to build, test, and release software quickly and reliably.
         - Let's make magic happen together!
-    - service: SkyPilot
+    - service: Sky Pilot
       title: Cloud Apps & SaaS Consulting
+      image: /images/services/cloud.png
       content: |
         The cloud is vast and full of wonders, and I'm here to help you navigate it!
         As your Cloud Applications and SaaS Consultant, I'll guide you through choosing and using the best cloud solutions for your needs.
         Whether it's AWS, Azure, or GCP, I'll make sure you're getting the most out of your cloud investments.
         - Let's soar through the clouds and achieve new heights together!
-    - service: SoftwareSculptor
+    - service: Software Sculptor
       title: General Software Consulting and Implementation
+      image: /images/services/software.png
       content: |
         Software can be tricky, but fear not - I'm here to help! As your go-to for General Software Consulting and Implementation, I'll dive deep into your software needs, from the big picture down to the nitty-gritty details.
         We'll select the perfect tech stack, streamline your development process, and implement software that not only works great but also drives your business forward.
         - Let's turn your software dreams into reality, together!
-    - service: DreamTeamer
+    - service: Dream Teamer
       title: Tech Team Forming and Hiring
+      image: /images/services/hiring.png
       content: |
         Building a dream tech team? Let me lend a hand! 
         With my expertise in Tech Team Forming and Hiring, I'll help you identify the tech stars you need, craft the perfect job roles, and set up a team that's ready to conquer any challenge.
         Think of me as your tech talent scout and coach, all rolled into one.
         - Let's build a team that's not just skilled but also a perfect fit for your vision, together!
-    - service: AgileAce
+    - service: Agile Ace
       title: Agile Transformation and Project Management
+      image: /images/services/agile.png
       content: |
         As your Agile Project Management and Agile Transformation guide, I'm here to do just that.
         Think of me as your agility coach, helping you adopt a flexible, collaborative, and super-efficient approach to managing projects.
@@ -511,14 +529,28 @@ params:
   contact:
     enable: true
     # title: "Custom Name"
-    content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
+    content: |
+      If you would like to talk about potential partnership, a problem that you are facing, or to even have a quick intro.
+      <br />Feel free to use the below methods.
     email: hi@bishoy.tech
-    btnName: Mail me
+    items:
+    - title: Meet and Greet
+      image:
+      content: |
+        Schedule a quick meeting with me using <br />[this link](https://go.bishoy.tech/meet).
+    - title: "Email"
+      # image: /images/achievments/public.png
+      content: |
+        Shoot me an email at <br />[hi@bishoy.tech](mailto:hi@bishoy.tech)
     formspree:
       enable: true # `contact.email` value will be ignored
       formId: mgejpnjz # Take it from your form's endpoint, like 'https://formspree.io/f/abcdefgh'
-      emailCaption: "Enter your email address"
-      messageCaption: "Enter your message here"
+      btnName: ShoOoOoT!
+      emailCaption: "Email"
+      nameCaption: "Name"
+      messageCaption: "Message"
+      content: |
+        You can also use the below form, and I will make sure to reply as soon as possible.
 
   footer:
     recentPosts:
@@ -557,6 +589,6 @@ params:
     articleList: "Jan 2, 2006"
     articleRecent: "Jan 2, 2006"
 
-  customCSS: true
+  customCSS: false
   #customScripts: -| # You can add custom scripts which will be added before </body> tag
   #  <script type="text/javascript"><!-- any script here --></script>
